190410 add user main

--- a/foodCourt/.settings/org.eclipse.core.resources.prefs
+++ b/foodCourt/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/kitri/foodCourt/user/main/FoodMain.java=MS949
 encoding//src/kitri/foodCourt/user/menu/FoodDto.java=MS949
 encoding//src/kitri/foodCourt/user/menu/FoodMain.java=MS949
 encoding//src/kitri/foodCourt/user/menu/FoodMainController.java=MS949
