--- a/foodCourt/.classpath
+++ b/foodCourt/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="src/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="src/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="src/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="src/jgoodies-looks-2.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
